基本功能已经完成

--- a/jquery-paging.html
+++ b/jquery-paging.html
@@ -48,7 +48,8 @@
 <script type="text/javascript" src="jquery-paging.js"></script>
 <script type="text/javascript" >
     $('#div').paging({
-
+        url: './page.json',
+        pageData: 5
     })
 </script>
 </html>
