差按钮的显示问题。左右两边为 ...

--- a/jquery-paging.html
+++ b/jquery-paging.html
@@ -49,7 +49,8 @@
 <script type="text/javascript" >
     $('#div').paging({
         url: './page.json',
-        pageData: 5
+        pageData: 5,
+        pageStep: 3
     })
 </script>
 </html>
