--- a/jquery-paging.html
+++ b/jquery-paging.html
@@ -23,26 +23,7 @@
 
 </table>
 
-<div id="div">
-    <!--<ul class="pagination">
-        <li><a >首页</a></li>
-        <li><a id="prePage" >上一页</a></li>
-        <li><a >1</a></li>
-        <li><a href="">2</a></li>
-        <li><a href="">3</a></li>
-        <li><a href="">4</a></li>
-        <li><a href="">5</a></li>
-        <li><a href="">6</a></li>
-        <li><a href="">7</a></li>
-        <li><a href="">8</a></li>
-        <li><a id="nextPage" href="javascript:nextPage()">下一页</a></li>
-        <li><a href="javascript:lastPage()">尾页</a></li>
-    </ul>-->
-</div>
-
-<!--<button onclick="kk()">测试获取数据</button>
-
-<button onclick="replaceData()">测试</button>-->
+<div id="div"></div>
 </body>
 <script type="text/javascript" src="jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="jquery-paging.js"></script>
@@ -50,7 +31,7 @@
     $('#div').paging({
         url: './page.json',
         pageData: 2,
-        pageStep: 6
+        pageStep: 10
     });
 </script>
 </html>
